# python-workshop

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml  requirements.txt
assets/images/python/: ATTRIBUTION.md
code/: 01-introduction-to-python.ipynb  01-introduction.ipynb  02-data-structures.ipynb  03-index-&-slice.ipynb  03-sequence-operations.ipynb  04-operator-&-operand.ipynb  05-type-conversion.ipynb  06-conditional-statements.ipynb  07-loops.ipynb  08-functions.ipynb  09-built-in-functions.ipynb  10-namespace-&-scope.ipynb  11-anonymous-functions.ipynb  12-pack-unpack.ipynb  13-advanced-comments.ipynb  13-type-hints-and-docstrings.ipynb  14-dependencies.ipynb  15-comprehensions.ipynb  16-introduction-to-oop.ipynb  17-closure-decorator.ipynb  18-oop-concepts.ipynb  19-context-managers.ipynb  20-special-methods.ipynb  21-errors-and-exceptions.ipynb  22-meta-classes.ipynb  23-singleton-design.ipynb
code/builtins/: dictionary-methods.ipynb  list-methods.ipynb  number-methods.ipynb  set-methods.ipynb  string-methods.ipynb  tuple-methods.ipynb
codes/: 00_introduction-to-python.ipynb  01_data-structures.ipynb  01_introduction-to-python.ipynb  02_data-structures.ipynb  02_index-&-slice.ipynb  03_index-&-slice.ipynb  03_operator-&-operand.ipynb  04-operator-&-operand.ipynb  04_conditional-statements.ipynb  04_operator-&-operand.ipynb  04_type-conversion.ipynb  05-type-conversion.ipynb  05_conditional-statements.ipynb  05_type-conversion.ipynb  06_conditional-statements.ipynb  06_loops.ipynb  07-loops.ipynb  07_functions.ipynb  07_loops.ipynb  08-functions.ipynb  08_built-in-functions.ipynb  08_functions.ipynb  09_built-in-functions.ipynb  09_namespace-&-scope.ipynb  10-namespace-&-scope.ipynb  10_lambda.ipynb  10_namespace-&-scope.ipynb  10_number-methods.ipynb  11-anonymous-functions.ipynb  11_lambda.ipynb  11_pack-unpack.ipynb  12-pack-unpack.ipynb  12_list-&-tuple-methods.ipynb  12_pack-unpack.ipynb  12_type-hints-and-docstrings.ipynb  13_dependencies.ipynb  13_type-hints-and-docstrings.ipynb  14-dependencies.ipynb  14_comprehensions.ipynb  14_dependencies.ipynb  (+25 more)
codes/built-in methods/: dictionary-methods.ipynb  list-methods.ipynb  number-methods.ipynb  set-&-dictionary.ipynb  set-methods.ipynb  string-methods.ipynb  tuple-methods.ipynb
codes/builtins/: dictionary-methods.ipynb  list-methods.ipynb  number-methods.ipynb  set-methods.ipynb  string-methods.ipynb  tuple-methods.ipynb
