[tool.poetry]
package-mode = false
name = "python_workshop"
description = "Comprehensive Python Workshop: Mastering Fundamentals and Advanced Techniques"
authors = ["Amirhossein Heydari <amirhosseinheydari78@gmail.com>"]
maintainers = ["Amirhossein Heydari <amirhosseinheydari78@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/mr-pylin/python-workshop"
keywords = ["Python", "programming", "software development", "tutorials"]
readme = "README.md"


[tool.poetry.urls]
"Amirhossein Heydari Homepage" = "https://mr-pylin.github.io"

[tool.poetry.dependencies]
python = "3.12.8"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
matplotlib = "^3.10.0"
numpy = "^2.2.1"
pandas = "^2.2.3"
torch = { version = "2.5.1", source = "pytorch" }

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150