[project]
name = "python-workshop"
version = "0.1.0"
authors = [
    {name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com"}
]
maintainers = [
    {name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com"}
]
description = "Comprehensive Python Workshop: Mastering Fundamentals and Advanced Techniques"
keywords = ["Python", "programming", "software development", "tutorials"]
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "assets/images/original/LICENSE",
]
requires-python = ">=3.13.7"

[project.optional-dependencies]
complete = [
    "matplotlib>=3.10.6,<4.0.0",
    "numpy>=2.3.2,<3.0.0",
    "pandas>=2.3.2,<3.0.0",
    "torch==2.8.0"
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1,<7.0.0",
    # "ipywidgets>=8.1.7,<9.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "complete" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.urls]
Repository = "https://github.com/mr-pylin/python-workshop"
MyHomepage = "https://mr-pylin.github.io"

[tool.black]
line-length = 120