[project]
name = "python-workshop"
version = "0.1.0"
authors = [
    { name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com" },
]
maintainers = [
    { name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com" },
]
description = "Comprehensive Python Workshop: Mastering Fundamentals and Advanced Techniques"
keywords = ["Python", "programming", "software development", "tutorials"]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "assets/images/original/LICENSE"]
requires-python = ">=3.14.0"
dependencies = [
    "ipykernel>=7.0.1,<8.0.0",
]

[project.optional-dependencies]
complete = [
    "matplotlib>=3.10.7,<4.0.0",
    "numpy>=2.3.4,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "torch==2.9.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", extra = "complete" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.urls]
Repository = "https://github.com/mr-pylin/python-workshop"
MyHomepage = "https://mr-pylin.github.io"

[tool.black]
line-length = 120
